--- a/scripts/package.json
+++ b/scripts/package.json
@@ -19,5 +19,8 @@
     "uuid": "^3.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0"
   }
 }
