--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           paths:
             - scripts/node_modules
       - run:
-          name: 'Add env variables'
+          name: "Add env variables"
           command: cd scripts && echo
             "AGENT_PROJECT=${DEV_AGENT_PROJECT}
 
@@ -24,18 +24,18 @@ jobs:
 
             GOOGLE_APPLICATION_CREDENTIALS=./mdhs-csa-key.json" > .env
       - run:
-          name: 'Add json key file'
+          name: "Add json key file"
           command: cd scripts && echo
             "${DEV_MDHS_CSA_KEY_JSON}" > mdhs-csa-key.json
       - run:
-          name: 'Agent configuration'
+          name: "Agent configuration"
           command: cd agent && mv agent.dev.json agent.json
       - run:
-          name: 'Import to Dev DialogFlow'
+          name: "Import to Dev DialogFlow"
           command: cd scripts && node restoreDialogflow
       - run:
-          name: 'Populate Firestore'
-          command: cd scripts && node populateFirestore
+          name: "Populate Firestore"
+          command: node scripts/populateFirestore
   deploy_dev_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -50,7 +50,7 @@ jobs:
           paths:
             - functions/node_modules
       - run:
-          name: 'Add env variables and deploy'
+          name: "Add env variables and deploy"
           command: cd functions && echo
             "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
 
@@ -78,7 +78,7 @@ jobs:
 
             AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
       - run:
-          name: 'Run geocode script'
+          name: "Run geocode script"
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
@@ -96,7 +96,7 @@ jobs:
           paths:
             - scripts/node_modules
       - run:
-          name: 'Add env variables'
+          name: "Add env variables"
           command: cd scripts && echo
             "AGENT_PROJECT=${ISD_AGENT_PROJECT}
 
@@ -106,17 +106,17 @@ jobs:
 
             GOOGLE_APPLICATION_CREDENTIALS=./mdhs-csa-key.json" > .env
       - run:
-          name: 'Add json key file'
+          name: "Add json key file"
           command: cd scripts && echo
             "${ISD_MDHS_CSA_KEY_JSON}" > mdhs-csa-key.json
       - run:
-          name: 'Agent Configuration'
+          name: "Agent Configuration"
           command: cd agent && mv agent.isd.json agent.json
       - run:
-          name: 'Import to ISD DialogFlow'
+          name: "Import to ISD DialogFlow"
           command: cd scripts && node restoreDialogflow
       - run:
-          name: 'Populate Firestore'
+          name: "Populate Firestore"
           command: cd scripts && node populateFirestore
   deploy_isd_functions:
     docker:
@@ -132,7 +132,7 @@ jobs:
           paths:
             - functions/node_modules
       - run:
-          name: 'Add env variables and deploy'
+          name: "Add env variables and deploy"
           command: cd functions && echo
             "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
 
@@ -160,7 +160,7 @@ jobs:
 
             AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
       - run:
-          name: 'Run geocode script'
+          name: "Run geocode script"
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $ISD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
@@ -178,7 +178,7 @@ jobs:
           paths:
             - scripts/node_modules
       - run:
-          name: 'Add env variables'
+          name: "Add env variables"
           command: cd scripts && echo
             "AGENT_PROJECT=${STAGE_AGENT_PROJECT}
 
@@ -188,17 +188,17 @@ jobs:
 
             GOOGLE_APPLICATION_CREDENTIALS=./mdhs-csa-key.json" > .env
       - run:
-          name: 'Add json key file'
+          name: "Add json key file"
           command: cd scripts && echo
             "${STAGE_MDHS_CSA_KEY_JSON}" > mdhs-csa-key.json
       - run:
-          name: 'Agent Configuration'
+          name: "Agent Configuration"
           command: cd agent && mv agent.stage.json agent.json
       - run:
-          name: 'Import to Stage DialogFlow'
+          name: "Import to Stage DialogFlow"
           command: cd scripts && node restoreDialogflow
       - run:
-          name: 'Populate Firestore'
+          name: "Populate Firestore"
           command: cd scripts && node populateFirestore
   deploy_stage_functions:
     docker:
@@ -214,7 +214,7 @@ jobs:
           paths:
             - functions/node_modules
       - run:
-          name: 'Add env variables and deploy'
+          name: "Add env variables and deploy"
           command: cd functions && echo
             "GOOGLE_MAPS_KEY=${STAGE_GOOGLE_MAPS_KEY}
 
@@ -242,7 +242,7 @@ jobs:
 
             AUTOML_CLIENT_EMAIL=${STAGE_AUTOML_CLIENT_EMAIL}" > .env
       - run:
-          name: 'Run geocode script'
+          name: "Run geocode script"
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $STAGE_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
@@ -260,7 +260,7 @@ jobs:
           paths:
             - scripts/node_modules
       - run:
-          name: 'Add env variables'
+          name: "Add env variables"
           command: cd scripts && echo
             "AGENT_PROJECT=${PROD_AGENT_PROJECT}
 
@@ -270,18 +270,18 @@ jobs:
 
             GOOGLE_APPLICATION_CREDENTIALS=./mdhs-csa-key.json" > .env
       - run:
-          name: 'Add json key file'
+          name: "Add json key file"
           command: cd scripts && echo
             "${PROD_MDHS_CSA_KEY_JSON}" > mdhs-csa-key.json
       - run:
-          name: 'Agent Configuration'
+          name: "Agent Configuration"
           command: cd agent && mv agent.prod.json agent.json
       - run:
-          name: 'Import to Prod DialogFlow'
-          command: cd scripts && node restoreDialogflow 
+          name: "Import to Prod DialogFlow"
+          command: cd scripts && node restoreDialogflow
       - run:
-          name: 'Populate Firestore'
-          command: cd scripts && node populateFirestore 
+          name: "Populate Firestore"
+          command: cd scripts && node populateFirestore
   deploy_prod_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -296,7 +296,7 @@ jobs:
           paths:
             - functions/node_modules
       - run:
-          name: 'Add env variables'
+          name: "Add env variables"
           command: cd functions && echo
             "GOOGLE_MAPS_KEY=${PROD_GOOGLE_MAPS_KEY}
 
@@ -324,7 +324,7 @@ jobs:
 
             AUTOML_CLIENT_EMAIL=${PROD_AUTOML_CLIENT_EMAIL}" > .env
       - run:
-          name: 'Run geocode script'
+          name: "Run geocode script"
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $PROD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
