--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       #     command: cd scripts && node restoreDialogflow
       - run:
           name: "Populate Firestore"
-          command: node scripts/populateFirestore
+          command: node scripts/populateFirestore && echo "Script: $? - Successfull"
   deploy_dev_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -337,11 +337,11 @@ workflows:
             branches:
               only:
                 - development
-      - deploy_dev_functions:
-          filters:
-            branches:
-              only:
-                - development
+      # - deploy_dev_functions:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - development
       - deploy_isd_dialogflow_agent:
           filters:
             branches:
