--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@ workflows:
   version: 2
   build_deploy:
     jobs:
-      - deploy_dialogflow_agent:
+      - deploy_dialogflow_agent_dev:
           jsonKey: ${DEV_MDHS_CSA_KEY_JSON}
           env: "dev"
           project: "csa"
@@ -123,7 +123,7 @@ workflows:
             branches:
               only:
                 - development
-      - deploy_functions:
+      - deploy_functions_dev:
           jsonKey: ${DEV_MDHS_CSA_KEY_JSON}
           env: "dev"
           envCap: "DEV"
@@ -133,7 +133,7 @@ workflows:
             branches:
               only:
                 - development
-      - deploy_dialogflow_agent:
+      - deploy_dialogflow_agent_isd:
           jsonKey: ${ISD_MDHS_CSA_KEY_JSON}
           env: "isd"
           project: "csa"
@@ -141,7 +141,7 @@ workflows:
             branches:
               only:
                 - isd
-      - deploy_functions:
+      - deploy_functions_isd:
           jsonKey: ${ISD_MDHS_CSA_KEY_JSON}
           env: "isd"
           envCap: "ISD"
