--- a/functions/package.json
+++ b/functions/package.json
@@ -24,7 +24,7 @@
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
     "dialogflow": "^0.9.1",
-    "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^8.0.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.2",
