--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
       - run:
           name: "Run geocode script"
           command: cd functions && node retrieveCoordinates
-      - run: sudo npm install -g firebase-tools
+      - run: npm install -g firebase-tools
       - run: firebase deploy -P << parameters.firebaseProjectID >> --only functions --token $FIREBASE_DEPLOY_TOKEN
 workflows:
   version: 2
