--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   deploy_dialogflow_agent:
     docker:
-      - image: circleci/node:10.15.0
+      - image: circleci/node
     working_directory: ~/repo/
     parameters:
       jsonKey:
