Fixing up some subject matter contexts

--- a/agent/intents/snap-application.json
+++ b/agent/intents/snap-application.json
@@ -3,7 +3,7 @@
   "name": "snap-application",
   "auto": true,
   "contexts": [
-    "snap-subjectMatter"
+    "snap-subject-matter"
   ],
   "responses": [
     {
