--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,7 @@ jobs:
           name: "Run geocode script"
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: firebase deploy -P << parameters.firebaseProjectID >> --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only functions --token $FIREBASE_DEPLOY_TOKEN
 workflows:
   version: 2
   build_deploy:
@@ -157,94 +157,94 @@ workflows:
               only:
                 - development
       - deploy_dialogflow_agent:
-          jsonKey: ${ISD_MDHS_CSA_KEY_JSON}
+          jsonKey: ISD_MDHS_CSA_KEY_JSON
           env: "isd"
-          agentProject: ${ISD_AGENT_PROJECT}
-          agentPrivateKey: ${ISD_AGENT_PRIVATE_KEY}
-          agentClientEmail: ${ISD_AGENT_CLIENT_EMAIL}
+          agentProject: ISD_AGENT_PROJECT
+          agentPrivateKey: ISD_AGENT_PRIVATE_KEY
+          agentClientEmail: ISD_AGENT_CLIENT_EMAIL
           filters:
             branches:
               only:
                 - isd
       - deploy_functions:
-          jsonKey: ${ISD_MDHS_CSA_KEY_JSON}
+          jsonKey: ISD_MDHS_CSA_KEY_JSON
           env: "isd"
-          firebaseProjectID: ${ISD_FIREBASE_PROJECT_ID}
-          googleMapsKey: ${STAGE_GOOGLE_MAPS_KEY}
-          serviceDeskKey: ${ISD_SERVICE_DESK_KEY}
-          serviceDeskURI: ${ISD_SERVICE_DESK_URI}
-          serviceDeskID: ${ISD_SERVICE_DESK_ID}
-          requestTypeID: ${ISD_REQUEST_TYPE_ID}
-          serviceDeskEnv: ${ISD_SERVICE_DESK_ENV}
-          analyticsURI: ${ISD_ANALYTICS_URI}
-          autoMLProject: ${DEV_AUTOML_PROJECT}
-          autoMLLocation: ${DEV_AUTOML_LOCATION}
-          autoMLSMModel: ${DEV_AUTOML_SM_MODEL}
-          autoMLCatModel: ${DEV_AUTOML_CAT_MODEL}
-          autoMLPrivateKey: ${DEV_AUTOML_PRIVATE_KEY}
-          autoMLClientEmail: ${DEV_AUTOML_CLIENT_EMAIL}
+          firebaseProjectID: ISD_FIREBASE_PROJECT_ID
+          googleMapsKey: STAGE_GOOGLE_MAPS_KEY
+          serviceDeskKey: ISD_SERVICE_DESK_KEY
+          serviceDeskURI: ISD_SERVICE_DESK_URI
+          serviceDeskID: ISD_SERVICE_DESK_ID
+          requestTypeID: ISD_REQUEST_TYPE_ID
+          serviceDeskEnv: ISD_SERVICE_DESK_ENV
+          analyticsURI: ISD_ANALYTICS_URI
+          autoMLProject: DEV_AUTOML_PROJECT
+          autoMLLocation: DEV_AUTOML_LOCATION
+          autoMLSMModel: DEV_AUTOML_SM_MODEL
+          autoMLCatModel: DEV_AUTOML_CAT_MODEL
+          autoMLPrivateKey: DEV_AUTOML_PRIVATE_KEY
+          autoMLClientEmail: DEV_AUTOML_CLIENT_EMAIL
           filters:
             branches:
               only:
                 - isd
       - deploy_dialogflow_agent:
-          jsonKey: ${STAGE_MDHS_CSA_KEY_JSON}
+          jsonKey: STAGE_MDHS_CSA_KEY_JSON
           env: "stage"
-          agentProject: ${STAGE_AGENT_PROJECT}
-          agentPrivateKey: ${STAGE_AGENT_PRIVATE_KEY}
-          agentClientEmail: ${STAGE_AGENT_CLIENT_EMAIL}
+          agentProject: STAGE_AGENT_PROJECT
+          agentPrivateKey: STAGE_AGENT_PRIVATE_KEY
+          agentClientEmail: STAGE_AGENT_CLIENT_EMAIL
           filters:
             branches:
               only:
                 - stage
       - deploy_functions:
-          jsonKey: ${STAGE_MDHS_CSA_KEY_JSON}
+          jsonKey: STAGE_MDHS_CSA_KEY_JSON
           env: "stage"
-          firebaseProjectID: ${STAGE_FIREBASE_PROJECT_ID}
-          googleMapsKey: ${STAGE_GOOGLE_MAPS_KEY}
-          serviceDeskKey: ${STAGE_SERVICE_DESK_KEY}
-          serviceDeskURI: ${STAGE_SERVICE_DESK_URI}
-          serviceDeskID: ${STAGE_SERVICE_DESK_ID}
-          requestTypeID: ${STAGE_REQUEST_TYPE_ID}
-          serviceDeskEnv: ${STAGE_SERVICE_DESK_ENV}
-          analyticsURI: ${STAGE_ANALYTICS_URI}
-          autoMLProject: ${STAGE_AUTOML_PROJECT}
-          autoMLLocation: ${STAGE_AUTOML_LOCATION}
-          autoMLSMModel: ${STAGE_AUTOML_SM_MODEL}
-          autoMLCatModel: ${STAGE_AUTOML_CAT_MODEL}
-          autoMLPrivateKey: ${STAGE_AUTOML_PRIVATE_KEY}
-          autoMLClientEmail: ${STAGE_AUTOML_CLIENT_EMAIL}
+          firebaseProjectID: STAGE_FIREBASE_PROJECT_ID
+          googleMapsKey: STAGE_GOOGLE_MAPS_KEY
+          serviceDeskKey: STAGE_SERVICE_DESK_KEY
+          serviceDeskURI: STAGE_SERVICE_DESK_URI
+          serviceDeskID: STAGE_SERVICE_DESK_ID
+          requestTypeID: STAGE_REQUEST_TYPE_ID
+          serviceDeskEnv: STAGE_SERVICE_DESK_ENV
+          analyticsURI: STAGE_ANALYTICS_URI
+          autoMLProject: STAGE_AUTOML_PROJECT
+          autoMLLocation: STAGE_AUTOML_LOCATION
+          autoMLSMModel: STAGE_AUTOML_SM_MODEL
+          autoMLCatModel: STAGE_AUTOML_CAT_MODEL
+          autoMLPrivateKey: STAGE_AUTOML_PRIVATE_KEY
+          autoMLClientEmail: STAGE_AUTOML_CLIENT_EMAIL
           filters:
             branches:
               only:
                 - stage
       - deploy_dialogflow_agent:
-          jsonKey: ${PROD_MDHS_CSA_KEY_JSON}
+          jsonKey: PROD_MDHS_CSA_KEY_JSON
           env: "prod"
-          agentProject: ${PROD_AGENT_PROJECT}
-          agentPrivateKey: ${PROD_AGENT_PRIVATE_KEY}
-          agentClientEmail: ${PROD_AGENT_CLIENT_EMAIL}
+          agentProject: PROD_AGENT_PROJECT
+          agentPrivateKey: PROD_AGENT_PRIVATE_KEY
+          agentClientEmail: PROD_AGENT_CLIENT_EMAIL
           filters:
             branches:
               only:
                 - master
       - deploy_functions:
-          jsonKey: ${PROD_MDHS_CSA_KEY_JSON}
+          jsonKey: PROD_MDHS_CSA_KEY_JSON
           env: "prod"
-          firebaseProjectID: ${PROD_FIREBASE_PROJECT_ID}
-          googleMapsKey: ${PROD_GOOGLE_MAPS_KEY}
-          serviceDeskKey: ${PROD_SERVICE_DESK_KEY}
-          serviceDeskURI: ${PROD_SERVICE_DESK_URI}
-          serviceDeskID: ${PROD_SERVICE_DESK_ID}
-          requestTypeID: ${PROD_REQUEST_TYPE_ID}
-          serviceDeskEnv: ${PROD_SERVICE_DESK_ENV}
-          analyticsURI: ${PROD_ANALYTICS_URI}
-          autoMLProject: ${PROD_AUTOML_PROJECT}
-          autoMLLocation: ${PROD_AUTOML_LOCATION}
-          autoMLSMModel: ${PROD_AUTOML_SM_MODEL}
-          autoMLCatModel: ${PROD_AUTOML_CAT_MODEL}
-          autoMLPrivateKey: ${PROD_AUTOML_PRIVATE_KEY}
-          autoMLClientEmail: ${PROD_AUTOML_CLIENT_EMAIL}
+          firebaseProjectID: PROD_FIREBASE_PROJECT_ID
+          googleMapsKey: PROD_GOOGLE_MAPS_KEY
+          serviceDeskKey: PROD_SERVICE_DESK_KEY
+          serviceDeskURI: PROD_SERVICE_DESK_URI
+          serviceDeskID: PROD_SERVICE_DESK_ID
+          requestTypeID: PROD_REQUEST_TYPE_ID
+          serviceDeskEnv: PROD_SERVICE_DESK_ENV
+          analyticsURI: PROD_ANALYTICS_URI
+          autoMLProject: PROD_AUTOML_PROJECT
+          autoMLLocation: PROD_AUTOML_LOCATION
+          autoMLSMModel: PROD_AUTOML_SM_MODEL
+          autoMLCatModel: PROD_AUTOML_CAT_MODEL
+          autoMLPrivateKey: PROD_AUTOML_PRIVATE_KEY
+          autoMLClientEmail: PROD_AUTOML_CLIENT_EMAIL
           filters:
             branches:
               only:
