--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,20 +41,23 @@ jobs:
           name: "echo .env"
           command: cd scripts && cat .env
       - run:
-          name: "Add json key file"
-          command: cd scripts && echo "<< parameters.jsonKey >>" > mdhs-key.json
+          name: "echo jsonKey"
+          command: echo ${<< parameters.jsonKey >>}
+      - run:
+          name: "echo mdhs-key.json"
+          command: cd scripts && echo "${<< parameters.jsonKey >>}" > mdhs-key.json
       - run:
           name: "echo mdhs-key.json"
           command: cd scripts && cat mdhs-key.json
-      - run:
-          name: "Agent configuration"
-          command: cd agent && mv agent.<< parameters.env >>.json agent.json
-      - run:
-          name: "Restore to << parameters.env >> Dialogflow"
-          command: cd scripts && node restoreDialogflow
-      - run:
-          name: "Populate Firestore"
-          command: cd scripts && node populateFirestore
+      # - run:
+      #     name: "Agent configuration"
+      #     command: cd agent && mv agent.<< parameters.env >>.json agent.json
+      # - run:
+      #     name: "Restore to << parameters.env >> Dialogflow"
+      #     command: cd scripts && node restoreDialogflow
+      # - run:
+      #     name: "Populate Firestore"
+      #     command: cd scripts && node populateFirestore
   deploy_functions:
     docker:
       - image: circleci/node
@@ -137,27 +140,27 @@ workflows:
             branches:
               only:
                 - development
-      - deploy_functions:
-          jsonKey: DEV_MDHS_CSA_KEY_JSON
-          env: dev
-          firebaseProjectID: DEV_FIREBASE_PROJECT_ID
-          googleMapsKey: DEV_GOOGLE_MAPS_KEY
-          serviceDeskKey: DEV_SERVICE_DESK_KEY
-          serviceDeskURI: DEV_SERVICE_DESK_URI
-          serviceDeskID: DEV_SERVICE_DESK_ID
-          requestTypeID: DEV_REQUEST_TYPE_ID
-          serviceDeskEnv: DEV_SERVICE_DESK_ENV
-          analyticsURI: DEV_ANALYTICS_URI
-          autoMLProject: DEV_AUTOML_PROJECT
-          autoMLLocation: DEV_AUTOML_LOCATION
-          autoMLSMModel: DEV_AUTOML_SM_MODEL
-          autoMLCatModel: DEV_AUTOML_CAT_MODEL
-          autoMLPrivateKey: DEV_AUTOML_PRIVATE_KEY
-          autoMLClientEmail: DEV_AUTOML_CLIENT_EMAIL
-          filters:
-            branches:
-              only:
-                - development
+      # - deploy_functions:
+      #     jsonKey: DEV_MDHS_CSA_KEY_JSON
+      #     env: dev
+      #     firebaseProjectID: DEV_FIREBASE_PROJECT_ID
+      #     googleMapsKey: DEV_GOOGLE_MAPS_KEY
+      #     serviceDeskKey: DEV_SERVICE_DESK_KEY
+      #     serviceDeskURI: DEV_SERVICE_DESK_URI
+      #     serviceDeskID: DEV_SERVICE_DESK_ID
+      #     requestTypeID: DEV_REQUEST_TYPE_ID
+      #     serviceDeskEnv: DEV_SERVICE_DESK_ENV
+      #     analyticsURI: DEV_ANALYTICS_URI
+      #     autoMLProject: DEV_AUTOML_PROJECT
+      #     autoMLLocation: DEV_AUTOML_LOCATION
+      #     autoMLSMModel: DEV_AUTOML_SM_MODEL
+      #     autoMLCatModel: DEV_AUTOML_CAT_MODEL
+      #     autoMLPrivateKey: DEV_AUTOML_PRIVATE_KEY
+      #     autoMLClientEmail: DEV_AUTOML_CLIENT_EMAIL
+      #     filters:
+      #       branches:
+      #         only:
+      #           - development
       - deploy_dialogflow_agent:
           jsonKey: ISD_MDHS_CSA_KEY_JSON
           env: isd
