--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,16 @@
 {
   "hosting": {
     "public": "interface/build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  },
+  "emulators": {
+    "functions": {
+      "host": "localhost",
+      "port": "4600"
+    }
   }
 }
