Small change to emulator script command

--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "emulator-dev": "firebase emulators:start --only functions --project dev",
-    "emulator-dev-debug": "firebase emulators:start --only functions --project dev --inspect-functions",
+    "emulator-dev-debug": "firebase emulators:start --inspect-functions",
     "deploy": "node retrieveCoordinates && firebase deploy --only functions",
     "deploy-dev": "node retrieveCoordinates && firebase deploy --only functions --project dev",
     "deploy-dev-beta": "node retrieveCoordinates && firebase deploy --only functions --project dev-beta",
