--- a/firebase.json
+++ b/firebase.json
@@ -8,9 +8,26 @@
     ]
   },
   "emulators": {
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true,
+      "host": "localhost",
+      "port": 4000
+    },
     "functions": {
       "host": "localhost",
-      "port": "4600"
+      "port": 4600
+    },
+    "database": {
+      "port": 9000
+    },
+    "pubsub": {
+      "port": 8085
+    },
+    "hosting": {
+      "port": 5000
     }
   }
 }
