--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,11 +179,11 @@ workflows:
           env: isd
           firebaseProjectID: ISD_FIREBASE_PROJECT_ID
           googleMapsKey: STAGE_GOOGLE_MAPS_KEY
-          serviceDeskKey: ISD_SERVICE_DESK_KEY
-          serviceDeskURI: ISD_SERVICE_DESK_URI
-          serviceDeskID: ISD_SERVICE_DESK_ID
-          requestTypeID: ISD_REQUEST_TYPE_ID
-          serviceDeskEnv: ISD_SERVICE_DESK_ENV
+          serviceDeskKey: DEV_SERVICE_DESK_KEY
+          serviceDeskURI: DEV_SERVICE_DESK_URI
+          serviceDeskID: DEV_SERVICE_DESK_ID
+          requestTypeID: DEV_REQUEST_TYPE_ID
+          serviceDeskEnv: DEV_SERVICE_DESK_ENV
           analyticsURI: ISD_ANALYTICS_URI
           autoMLProject: DEV_AUTOML_PROJECT
           autoMLLocation: DEV_AUTOML_LOCATION
