--- a/scripts/package.json
+++ b/scripts/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.2.0",
     "firebase-admin": "^8.7.0",
     "jszip": "^3.4.0",
+    "fs": "0.0.1-security",
     "node-fetch": "^2.3.0",
     "parse-address": "^1.1.2",
     "uuid": "^3.3.2",
