--- a/functions/package.json
+++ b/functions/package.json
@@ -7,14 +7,14 @@
     "start": "npm run shell",
     "emulator-dev": "firebase emulators:start --only functions --project dev",
     "emulator-dev-debug": "firebase emulators:start --inspect-functions",
-    "deploy": "node retrieveCoordinates && firebase deploy --only functions",
-    "deploy-dev": "node retrieveCoordinates && firebase deploy --only functions --project dev",
-    "deploy-dev-beta": "node retrieveCoordinates && firebase deploy --only functions --project dev-beta",
-    "deploy-stage": "node retrieveCoordinates && firebase deploy --only functions --project stage",
-    "deploy-dev-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
-    "deploy-dev-beta-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev-beta",
-    "deploy-stage-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project stage",
-    "deploy-prod": "node retrieveCoordinates && firebase deploy --only functions --project prod",
+    "deploy": "firebase deploy --only functions",
+    "deploy-dev": "firebase deploy --only functions --project dev",
+    "deploy-dev-beta": "firebase deploy --only functions --project dev-beta",
+    "deploy-stage": "firebase deploy --only functions --project stage",
+    "deploy-dev-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
+    "deploy-dev-beta-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev-beta",
+    "deploy-stage-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project stage",
+    "deploy-prod": "firebase deploy --only functions --project prod",
     "logs": "firebase functions:log",
     "test": "jest",
     "lint": "npx eslint '**/*.js'",
