--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,11 +135,11 @@ jobs:
       - checkout
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd functions && npm install
+      - run: cd scripts && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - functions/node_modules
+            - scripts/node_modules
       - run:
           name: "Add env variables to scripts folder"
           command: cd scripts && echo "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}" > .env
