--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,9 +99,7 @@ jobs:
       - run:
           name: "Add env variables to functions folder"
           command: cd functions && echo
-            "GOOGLE_MAPS_KEY=${<< parameters.googleMapsKey >>}
-
-            SERVICE_DESK_KEY=${<< parameters.serviceDeskKey >>}
+            "SERVICE_DESK_KEY=${<< parameters.serviceDeskKey >>}
 
             SERVICE_DESK_URI=${<< parameters.serviceDeskURI >>}
 
@@ -124,6 +122,10 @@ jobs:
             AUTOML_PRIVATE_KEY=${<< parameters.autoMLPrivateKey >>}
 
             AUTOML_CLIENT_EMAIL=${<< parameters.autoMLClientEmail >>}" > .env
+
+      - run:
+          name: "Add env variables to functions/intentHandlers/common folder"
+          command: cd functions/intentHandlers/common && echo "GOOGLE_MAPS_KEY=${<< parameters.googleMapsKey >>}" > .env
 
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only functions --token $FIREBASE_DEPLOY_TOKEN
