Restructed sites to allow for multiple apps

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ typings/
 
 # Optional npm cache directory
 .npm
+.npmrc
 
 # Optional eslint cache
 .eslintcache
@@ -69,6 +70,8 @@ functions/analyticsKey.json
 **/keys/
 scripts/export/
 content/
+
+**/build
 
 emulate-firebase.bat
 ngrok.bat
