Updating for multiple hosted sites

--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,24 @@
 {
-  "hosting": {
-    "public": "interface/build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  },
+  "hosting": [
+    {
+      "target": "analytics",
+      "public": "interface/analytics/build",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    },
+    {
+      "target": "testHarness",
+      "public": "interface/testHarness/build",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    }
+  ],
   "emulators": {
     "firestore": {
       "port": 8080
